--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <main>
         <section id="capa">
-            <div id="capalogo"><img src="logom.png" alt=""></div>
+            <div id="capalogo"><img src="logom3.png" alt=""></div>
         </section>
 
         <section id="populares">
