--- a/index2.html
+++ b/index2.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="estilo2.css">
     <title>Patrulha Canina - O Musical</title>
 </head>
+
 <body>
-    
+    <main>
+        <section id="introd">
+            <div id="cor">
+            </div>
+            <div id="image">
+                <img src="patrulhacanina.jpg" alt="">  
+            </div>
+        </section>
+
+        <section id="content">
+            <div id="texto">
+            <h1>Patrulha Canina - O Musical</h1></div>
+            <div id="texto2">
+                <p>Valor Unitário: R$150</p>
+                <p>Quantidade de Ingressos: <input type="number" id="num"> <input type="button" value="Comprar" onclick="comprar()"></p>
+            </div>
+            <div id="result">
+
+            </div>
+
+        </section>
+    </main>  
+    <script src="script.js"></script>  
 </body>
 </html>
