--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="logo"><img src="logobranca.png" alt=""></div>
             <ul class="nav-list">
                 <li><a href="">Cliente</a></li>
-                <li><a href="">Administrador</a></li>
+                <li><a href="index3.html" target="_blank">Administrador</a></li>
             </ul>
         </nav>
     </header>
