--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
             <div id="partefooter">
 
                 <div class="foot">
-                    <i class="fa-solid fa-location-dot" style="color: #F6A702;"></i>
+                    <div class="icons"><i class="fa-solid fa-location-dot" style="color: #F6A702;"></i></div>
                     <p>R. Rio de Janeiro, 471 - Centro, Belo Horizonte - MG, 30160-040 </p>
                 </div>
 
                 <div class="foot">
-                    <i class="fa-solid fa-envelope" style="color: #F6A702;"></i>
+                    <div class="icons"><i class="fa-solid fa-envelope" style="color: #F6A702;"></i></div>
                     <p>teatrobolshoi@gmail.com</p>
                 </div>
 
                 <div class="foot">
-                    <i class="fa-solid fa-phone" style="color: #F6A702;"></i>
+                    <div class="icons"><i class="fa-solid fa-phone" style="color: #F6A702;"></i></div>
                     <p>+55 (31) 2002 - 6352</p>
                 </div>
             </div>
