--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="estilo.css">
-    <title>Document</title>
+    <title>Teatro Bolshoi</title>
 </head>
 <body>
     <header>
         <nav id="nav">
             <div id="logo"><img src="logobranca.png" alt=""></div>
             <ul class="nav-list">
-                <li><a href="">Cliente</a></li>
+                
                 <li><a href="index3.html" target="_blank">Administrador</a></li>
             </ul>
         </nav>
